<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.sellnbuy.activity.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.sellnbuy.activity.MyPostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_mypost" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.sellnbuy.activity.WatchListFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_watch_list" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.example.sellnbuy.activity.ChatFragment"
        android:label="@string/title_message"
        tools:layout="@layout/fragment_chat" />
</navigation>
